CSS: Fix bookmark tag delete button icon legibility
On some non-Adwaita themes it can be white-on-white.

--- a/src/resources/themes/shared.scss
+++ b/src/resources/themes/shared.scss
@@ -88,6 +88,10 @@
     // FIXME: This should be theme_text_color, but HighContrast doesn't export it
     color: themecolor(theme_fg_color);
   }
+
+  button:hover image {
+    color: themecolor(theme_fg_color);
+  }
 }
 
 .bookmark-tag-widget-selected {
